# taxicab

./: Cargo.toml  Diagram1.dia  Readme.md  TODO.md  producer-consumer.dia
examples/: consumer.rs  first_ride.rs  producer.rs
src/: client.rs  controller.rs  dispatcher.rs  lib.rs  message.rs  passenger.rs  server.rs  state.rs  taxicab_connection.rs  trip.rs
