[package]
name = "taxicab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bincode = "2.0.1"
tokio = {version="1", features =["full"]}
tokio-util = {version="0.7.0", features=["full"]}
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
valuable = { version = "0.1.0", features = ["derive"] }
uuid = {version = "1.18.1", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
async-trait = "0.1.89"
rand = "0.9.2"
